[package]
name = "plugin-transactor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rippled-bridge = {path = "../rippled-bridge"}
xrpl-rust-sdk-core = {path = "../../../../xrpl-rust-sdk/xrpl-rust-sdk-core"}
